samples/_failures_safe/1761789563_6549d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feed179f.c: In function ‘main’:
./samples/SAFE/__tmp_feed179f.c:202:16: error: expected ‘;’ at end of input
  202 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_feed179f.c:202:9: error: expected declaration or statement at end of input
  202 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_feed179f.c:202:9: error: expected declaration or statement at end of input
